--- a/CRT_analyses.Rmd
+++ b/CRT_analyses.Rmd
@@ -4,10 +4,9 @@ author: "Rachel Kaminsky"
 date: "6 July 2017"
 output: html_document
 ---
-##Summary 
 R code for analyzing the contribution of conditionally rare taxa to prokaryotic populations (Kaminsky and Morales 2017)
 
-###Load packages
+Load packages
 ```{r}
 library(ggplot2)
 library(ggthemes)
@@ -15,7 +14,7 @@ library(vegan)
 library(phyloseq)
 ```
 
-###Set working directory and add files
+Set working directory and add files
 ```{r, cache = TRUE, cache.lazy=FALSE}
 setwd("/Your_FilePath")
 otu <- paste("otu.biom", sep = "")
@@ -25,13 +24,13 @@ map <- import_qiime_sample_data(map)
 mm <- merge_phyloseq(map,otu)
 ```
 
-###Remove OTUs that aren't present in at least one sample, confirm all taxa > 0
+Remove OTUs that aren't present in at least one sample, confirm all taxa > 0
 ```{r, cache = TRUE, cache.lazy=FALSE}
 mm_rm = prune_taxa(taxa_sums(mm) > 0, mm)
 any(taxa_sums(mm)== 0)
 ```
 
-###Divide counts by ten, remove zeros
+Divide counts by ten, remove zeros
 ```{r, cache = TRUE, cache.lazy=FALSE}
 mm_10  = transform_sample_counts(mm, function(x) x / 10) 
 mm_r  = transform_sample_counts(mm_10, round )
@@ -39,21 +38,21 @@ mm_r = prune_taxa(taxa_sums(mm_r) > 0, mm_r)
 any(taxa_sums(mm_r)== 0)
 ```
 
-###Rename ranks
+Rename ranks
 ```{r, cache = TRUE, cache.lazy=FALSE}
 colnames(tax_table(mm_r)) = c("Domain", "Phylum", "Class", "Order", "Family", "Genus", "Species")
 ```
 
-##For time-responsive CRT:
+For time-responsive CRT:
 
-###Subset site-level data (using site AV as an example, so must repeat this 23 more times)
+Subset site-level data (using site AV as an example, so must repeat this 23 more times)
 ```{r}
 av=as.vector(sample_data(mm_r) $Site=="AV")
 av=prune_samples(av, mm_r)
 av=prune_taxa(taxa_sums(av)>0, av)
 ```
 
-###Make OTU table that averages reads from site replicates under each time point 
+Make OTU table that averages reads from site replicates under each time point 
 ```{r, cache = TRUE, cache.lazy=FALSE}
 speciesList <- tapply(sample_names(av), get_variable(av, "SampleTP"), c)
 speciesPhyseq <- lapply(speciesList, prune_samples, av)
@@ -65,9 +64,9 @@ pooledOTUtable = data.frame(OTU=row.names(pooledOTUtable),pooledOTUtable)
 write.table(pooledOTUtable, "av_tp_otu.txt", quote = FALSE, row.names = FALSE, sep = "\t")
 ```
 
-####Convert to biom in qiime
+Convert to biom in qiime
 
-###Import biom file, add metadata and taxonomy
+Import biom file, add metadata and taxonomy
 ```{r}
 av_tp_biom <- paste("av_tp_otu.biom", sep = "")
 av_tp_biom <- import_biom(av_tp_biom)
@@ -76,12 +75,12 @@ av_tp_map <- import_qiime_sample_data(av_tp_map)
 av_tp <- merge_phyloseq(av_tp_biom, tax_table(av), av_tp_map)
 ```
 
-###Round counts
+Round counts
 ```{r}
 av_tp_r  = transform_sample_counts(av_tp, round)
 ```
 
-###Plot rank abundance curve (figure s2)
+Plot rank abundance curve (figure s2)
 ```{r}
 library(dplyr)
 phyloTemp = transform_sample_counts(av_tp_r, function(x) 1e+02 * x/sum(x))
@@ -95,9 +94,9 @@ ggplot(clusterAgg,aes(x=reorder(OTU,-Abundance),y=Abundance)) +
     scale_y_log10()
 ```
 
-####Use rank abundance curve to choose a cutoff for the rare biosphere
+Use rank abundance curve to choose a cutoff for the rare biosphere
 
-###Get CRT
+Get CRT
 ```{r}
 av_tp_r_dat <- data.frame(otu_table(av_tp_r))
 write.table(av_tp_r_dat, "av_tp_r_otu.txt", quote = FALSE, sep = "\t")
@@ -107,9 +106,9 @@ source("CRT_Functions_v1.1.R")
 SimpleRareToPrev.f(otu_fp="av_tp_r_otu.txt", abund_thresh=0.0001, abund_thresh_ALL=FALSE, b_thresh=0.90, rdp_lastcol=FALSE)
 ```
 
-####Copy OTU column from results file, paste into a new spreadsheet and save as a csv
+Copy OTU column from results file, paste into a new spreadsheet and save as a csv
 
-###Prune original OTU table to only include CRT, save to directory 
+Prune original OTU table to only include CRT, save to directory 
 ```{r, cache = TRUE, cache.lazy=FALSE}
 speciesList <- tapply(sample_names(av), get_variable(av, "SampleID"), c)
 speciesPhyseq <- lapply(speciesList, prune_samples, av)
@@ -124,16 +123,16 @@ pOTU.crt = merge(pooledOTUtable, avcrt, by.x = "OTU")
 write.table(pOTU.crt, "av_tp_sid_crt_otu.txt", quote = FALSE, row.names = FALSE, sep = "\t")
 ```
 
-####Convert to biom in qiime
+Convert to biom in qiime
 
-###Import CRT biom files, add metadata and taxonomy
+Import CRT biom files, add metadata and taxonomy
 ```{r}
 av_tp_crt_biom <- paste("av_tp_sid_crt_otu.biom", sep = "")
 av_tp_crt_biom <- import_biom(av_tp_crt_biom)
 av_tp_crt <- merge_phyloseq(av_tp_crt_biom, map, tax_table(av))
 ```
 
-###Make Bray Curtis distance matrices
+Make Bray Curtis distance matrices
 ```{r}
 ##Time CRT only
 av_tp_crt_dist <- distance(av_tp_crt, "bray")
@@ -150,7 +149,7 @@ av_notpcrt <- prune_taxa(allTaxa, av) ###Prune OTU table to exclude CRT
 av_notpcrt_dist <- distance(av_notpcrt, "bray") ###make distance matrix
 ```
 
-###Mantel tests
+Mantel tests
 ```{r}
 ##Whole community + CRT v. Time CRT only
 mantel(av_dist, av_tp_crt_dist, method = "pearson")
@@ -160,7 +159,7 @@ mantel(av_dist, av_notpcrt_dist, method = "pearson")
 
 ```
 
-###ANOSIM tests
+ANOSIM tests
 ```{r}
 ##Time CRT
 avtp_group = get_variable(av_tp_crt, "TimePoint")
@@ -179,9 +178,9 @@ plot(avtp_ano)
 plot(av_ano)
 ```
 
-####Outputs from Mantel and ANOSIM entered into a CSV
+Outputs from Mantel and ANOSIM entered into a CSV
 
-##Make Figure 1
+Make Figure 1
 ```{r}
 ##Mantel boxplot
 mantel <- read.csv("Mantel_T.csv")
@@ -193,9 +192,9 @@ p1 <- ggplot(ano, aes(Community, Anosimr)) + geom_boxplot() + theme_minimal() + 
 
 ```
 
-##For space-responsive CRT:
+For space-responsive CRT:
 
-##Make OTU table that combines site replicates under each sample, across time points 
+Make OTU table that combines site replicates under each sample, across time points 
 ```{r, cache = TRUE, cache.lazy=FALSE}
 speciesList <- tapply(sample_names(mm_r), get_variable(mm_r, "Sample"), c)
 speciesPhyseq <- lapply(speciesList, prune_samples, mm_r)
@@ -207,9 +206,9 @@ pooledOTUtable = data.frame(OTU=row.names(pooledOTUtable),pooledOTUtable)
 write.table(pooledOTUtable, "mm_r_sam_otu.txt", quote = FALSE, row.names = FALSE, sep = "\t")
 ```
 
-####Convert to biom in qiime
+Convert to biom in qiime
 
-###Import biom file, add metadata and taxonomy
+Import biom file, add metadata and taxonomy
 ```{r}
 mm_r_sam_biom <- paste("mm_r_sam_otu.biom", sep = "")
 mm_r_sam_biom <- import_biom(mm_r_sam_biom)
@@ -218,12 +217,11 @@ mm_r_sam_map <- import_qiime_sample_data(mm_r_sam_map)
 mm_r_sam <- merge_phyloseq(mm_r_sam_biom, tax_table(mm_r), mm_r_sam_map)
 ```
 
-###Round counts
+Round counts
 ```{r}
 mm_r_sam_r  = transform_sample_counts(mm_r_sam, round)
 ```
-
-###Plot rank abundance curve (figure s3)
+Plot rank abundance curve (figure s3)
 ```{r}
 library(dplyr)
 phyloTemp = transform_sample_counts(mm_r_sam_r, function(x) 1e+02 * x/sum(x))
@@ -237,9 +235,9 @@ ggplot(clusterAgg,aes(x=reorder(OTU,-Abundance),y=Abundance)) +
     scale_y_log10()
 ```
 
-####Use rank abundance curve to choose a cutoff for the rare biosphere
+Use rank abundance curve to choose a cutoff for the rare biosphere
 
-###Get CRT
+Get CRT
 ```{r}
 mm_r_sam_r_dat <- data.frame(otu_table(mm_r_sam_r))
 write.table(mm_r_sam_r_dat, "mm_r_sam_r_otu.txt", quote = FALSE,  sep = "\t")
@@ -247,9 +245,9 @@ write.table(mm_r_sam_r_dat, "mm_r_sam_r_otu.txt", quote = FALSE,  sep = "\t")
 SimpleRareToPrev.f(otu_fp="mm_r_sam_r_otu.txt", abund_thresh=0.0001, abund_thresh_ALL=FALSE, b_thresh=0.90, rdp_lastcol=FALSE)
 ```
 
-####Copy OTU column from results file, paste into a new spreadsheet and save as a csv
+Copy OTU column from results file, paste into a new spreadsheet and save as a csv
 
-###Prune OTU table to only include CRT, save to directory 
+Prune OTU table to only include CRT, save to directory 
 ```{r, cache = TRUE, cache.lazy=FALSE}
 speciesList2 <- tapply(sample_names(mm_r), get_variable(mm_r, "SampleID"), c)
 speciesPhyseq2 <- lapply(speciesList2, prune_samples, mm_r)
@@ -264,9 +262,9 @@ pOTU.crt = merge(pooledOTUtable2, mm_r_sam_crt, by.x = "OTU")
 write.table(pOTU.crt, "mm_r_sam_sid_crt.txt", quote = FALSE, row.names = FALSE, sep = "\t")
 ```
 
-####Convert to biom in qiime
+Convert to biom in qiime
 
-###Import CRT biom file, add metadata and taxonomy
+Import CRT biom file, add metadata and taxonomy
 ```{r}
 mm_r_sam_crt_biom <- paste("mm_r_sam_sid_crt.biom", sep = "")
 mm_r_sam_crt_biom <- import_biom(mm_r_sam_crt_biom)
@@ -274,7 +272,7 @@ mm_r_sam_crt <- merge_phyloseq(sample_data(mm_r),mm_r_sam_crt_biom)
 mm_r_sam_crt <- merge_phyloseq(mm_r_sam_crt, tax_table(mm_r))
 ```
 
-###Make Bray Curtis distance matrices
+Make Bray Curtis distance matrices
 ```{r}
 ##Whole community + CRT
 mm_r_dist <- distance(mm_r, "bray")
@@ -291,7 +289,7 @@ mm_r_nosamcrt <- prune_taxa(allTaxa, mm_r) ###Prune OTU table to exclude CRT
 mm_r_nosamcrt_dist <- distance(mm_r_nosamcrt, "bray") ###make distance matrix
 ```
 
-###Mantel tests
+Mantel tests
 ```{r}
 ##Whole community + CRT v. Space CRT only
 mantel(mm_r_dist, mm_r_sam_crt_dist, method = "pearson")
@@ -301,7 +299,7 @@ mantel(mm_r_dist, mm_r_nosamcrt_dist, method = "pearson")
 
 ```
 
-###DCA plots showing relationship between CRT, whole community and spatial factors (figure s6)
+DCA plots showing relationship between CRT, whole community and spatial factors (figure s6)
 ```{r}
 ##Make ordinations
 mm_r_sam_crt_dca = ordinate(mm_r_sam_crt, "DCA", "bray") ###CRT
@@ -318,7 +316,7 @@ p4 = plot_ordination(mm_r_sam_crt, mm_r_sam_crt_dca, color = "SoilOrder") + them
 p5 = plot_ordination(mm_r, mm_r_dca, color = "SoilOrder") + theme_few() + theme(text = element_text(size=25), axis.text.x = element_text(angle = 90, hjust = 1)) + geom_point(size = 5) + scale_color_discrete(name = "Soil Order") + ggtitle("Whole Community") 
 ```
 
-###ANOSIM tests against land use and soil order (figure s7, table s2)
+ANOSIM tests against land use and soil order (figure s7, table s2)
 ```{r}
 ##CRT v. Land Use
 mm_r_crtlu_group = get_variable(mm_r_sam_crt, "LandUse")
@@ -351,7 +349,7 @@ plot(mm_r_crtso_ano)
 plot(mm_r_so_ano)
 ```
 
-###Mantel tests against pH (table s2)
+Mantel tests against pH (table s2)
 ```{r}
 #Make pH distance matrix, will be same for both CRT and whole community
 mm_r_sd <- data.frame(mm_r_map)
@@ -365,7 +363,7 @@ mantel(mm_r_sam_crt_dist, mm_r_ph_dist, method = "pearson")
 mantel(mm_r_dist, mm_r_ph_dist, method = "pearson")
 ```
 
-###Correlations between individual CRTs and spatiotemporal factors
+Correlations between individual CRTs and spatiotemporal factors
 ```{r}
 library(ALDEx2)
 
@@ -386,7 +384,7 @@ mmrsam.so.aldex.glm <- aldex.glm(mmrsam.aldex.clr, meta$SoilOrder) ###generate c
 mmrsam.pH.aldex.corr <- aldex.corr(mmrsam.aldex.clr, meta$pH) ###generate correlations between OTUs and pH
 ```
 
-###Link OTUs to sapatiotemporal factors to plot
+Link OTUs to sapatiotemporal factors to plot
 ```{r}
 ##Convert to relative abundance of a sample
 mm_r_sam_crt_r  = transform_sample_counts(mm_r_sam_crt, function(x) x / sum(x))
@@ -433,9 +431,9 @@ pOTUtax2.m <- melt(pOTUtax2)
 write.csv(pOTUtax2.m, "TP_Aldex_melt.csv")
 ```
 
-###Add column to csv file that has the lowest available taxonomic classification
+Add column to csv file that has the lowest available taxonomic classification
 
-###Make Figure 2
+Make Figure 2
 ```{r}
 pOTUtaxm.m <- read.csv("LU_Aldex_melt.csv")
 name_order <- c("Dairy", "Sheep+Beef", "HighCountry")
